crates/cli/src/snapshots/mltrs_cli__build_tasks__tests__alignment_tests@shaders__compiled__readback.comp.json.snap
---
source: crates/cli/src/build_tasks.rs
info:
  relative_path: shaders/compiled/readback.comp.json
---
{
  "sourceFileName": "readback.compute.slang",
  "globalParameters": [
    {
      "kind": "parameterBlock",
      "parameterName": "params",
      "elementType": {
        "typeName": "ReadbackParams",
        "fields": [
          {
            "kind": "pointer",
            "fieldName": "output",
            "binding": {
              "kind": "uniform",
              "offset": 0,
              "size": 8
            },
            "pointeeType": {
              "typeName": "ReadbackOutput",
              "fields": [
                {
                  "kind": "scalar",
                  "fieldName": "marker",
                  "binding": {
                    "kind": "uniform",
                    "offset": 0,
                    "size": 4
                  },
                  "scalarType": "uint32"
                },
                {
                  "kind": "vector",
                  "fieldName": "vector",
                  "binding": {
                    "kind": "uniform",
                    "offset": 16,
                    "size": 16
                  },
                  "elementCount": 4,
                  "elementType": {
                    "kind": "scalar",
                    "scalarType": "float32"
                  }
                },
                {
                  "kind": "struct",
                  "fieldName": "nested",
                  "binding": {
                    "kind": "uniform",
                    "offset": 32,
                    "size": 16
                  },
                  "structType": {
                    "typeName": "ReadbackInner",
                    "fields": [
                      {
                        "kind": "vector",
                        "fieldName": "xy",
                        "binding": {
                          "kind": "uniform",
                          "offset": 0,
                          "size": 8
                        },
                        "elementCount": 2,
                        "elementType": {
                          "kind": "scalar",
                          "scalarType": "float32"
                        }
                      },
                      {
                        "kind": "scalar",
                        "fieldName": "id",
                        "binding": {
                          "kind": "uniform",
                          "offset": 8,
                          "size": 4
                        },
                        "scalarType": "uint32"
                      }
                    ]
                  }
                },
                {
                  "kind": "enum",
                  "fieldName": "tag",
                  "binding": {
                    "kind": "uniform",
                    "offset": 48,
                    "size": 4
                  },
                  "enumType": {
                    "typeName": "ReadbackTag",
                    "tagType": "uint32",
                    "cases": [
                      {
                        "name": "Ready",
                        "value": 3
                      },
                      {
                        "name": "Done",
                        "value": 7
                      }
                    ]
                  }
                },
                {
                  "kind": "matrix",
                  "fieldName": "transform",
                  "binding": {
                    "kind": "uniform",
                    "offset": 64,
                    "size": 64
                  },
                  "rowCount": 4,
                  "columnCount": 4,
                  "elementType": {
                    "kind": "scalar",
                    "scalarType": "float32"
                  }
                },
                {
                  "kind": "array",
                  "fieldName": "values",
                  "binding": {
                    "kind": "uniform",
                    "offset": 128,
                    "size": 32
                  },
                  "elementScalarType": "uint32",
                  "elementCount": 2,
                  "elementStride": 16
                }
              ]
            },
            "pointeeSize": 160,
            "access": "readWrite"
          }
        ]
      }
    }
  ],
  "computeEntryPoint": {
    "entryPointName": "computeMain",
    "stage": "compute",
    "parameters": []
  },
  "workgroupSize": [
    1,
    1,
    1
  ],
  "pipelineLayout": {
    "descriptorSetLayouts": [
      {
        "bindingRanges": [
          {
            "binding": 0,
            "descriptorType": "constantBuffer",
            "descriptorCount": 1,
            "stageFlags": "all",
            "size": 16
          }
        ]
      }
    ],
    "pushConstantRanges": [],
    "bindlessHeapSet": null
  }
}
