crates/cli/src/snapshots/mltrs_cli__build_tasks__tests__alignment_tests@shaders__compiled__std140_nested_structs.json.snap
---
source: crates/cli/src/build_tasks.rs
info:
  relative_path: shaders/compiled/std140_nested_structs.json
---
{
  "sourceFileName": "std140_nested_structs.shader.slang",
  "globalParameters": [
    {
      "kind": "parameterBlock",
      "parameterName": "params",
      "elementType": {
        "typeName": "OuterData",
        "fields": [
          {
            "kind": "scalar",
            "fieldName": "x",
            "binding": {
              "kind": "uniform",
              "offset": 0,
              "size": 4
            },
            "scalarType": "float32"
          },
          {
            "kind": "struct",
            "fieldName": "inner",
            "binding": {
              "kind": "uniform",
              "offset": 16,
              "size": 16
            },
            "structType": {
              "typeName": "InnerData",
              "fields": [
                {
                  "kind": "scalar",
                  "fieldName": "a",
                  "binding": {
                    "kind": "uniform",
                    "offset": 0,
                    "size": 4
                  },
                  "scalarType": "float32"
                },
                {
                  "kind": "vector",
                  "fieldName": "b",
                  "binding": {
                    "kind": "uniform",
                    "offset": 8,
                    "size": 8
                  },
                  "elementCount": 2,
                  "elementType": {
                    "kind": "scalar",
                    "scalarType": "float32"
                  }
                }
              ]
            }
          },
          {
            "kind": "scalar",
            "fieldName": "y",
            "binding": {
              "kind": "uniform",
              "offset": 32,
              "size": 4
            },
            "scalarType": "float32"
          }
        ]
      }
    }
  ],
  "vertexEntryPoint": {
    "entryPointName": "vertMain",
    "stage": "vertex",
    "parameters": [
      {
        "kind": "scalar",
        "parameterName": "id",
        "semanticName": "SV_VERTEXID",
        "scalarType": "uint32"
      }
    ]
  },
  "fragmentEntryPoint": {
    "entryPointName": "fragMain",
    "stage": "fragment",
    "parameters": []
  },
  "pipelineLayout": {
    "descriptorSetLayouts": [
      {
        "bindingRanges": [
          {
            "binding": 0,
            "descriptorType": "constantBuffer",
            "descriptorCount": 1,
            "stageFlags": "all",
            "size": 48
          }
        ]
      }
    ],
    "pushConstantRanges": []
  }
}
